[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Menus/MainMenuSprites.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Menus/MainMenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Menus/ReturnButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Menus/OptionMenu/OptionsMenu.tres.gd" type="Script" id=4]
[ext_resource path="res://Other/Themes/MenusThemes.tres" type="Theme" id=5]
[ext_resource path="res://Scripts/Menus/Other/KeyChangePopup.gd" type="Script" id=7]
[ext_resource path="res://Other/Fonts/lemon/19919.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 20
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.388235, 0.388235, 0.388235, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0.184314 )
shadow_size = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.301961, 0.745098, 0.529412, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0.184314 )
shadow_size = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.262745, 0.784314, 0.317647, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0.184314 )
shadow_size = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.286275, 0.737255, 0.647059, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0.184314 )
shadow_size = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.215686, 0.498039, 0.882353, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0.184314 )
shadow_size = 1
anti_aliasing = false

[sub_resource type="Theme" id=7]
Button/colors/font_color = Color( 0.270588, 0.788235, 0.423529, 1 )
Button/colors/font_color_disabled = Color( 0.337255, 0.380392, 0.741176, 1 )
Button/colors/font_color_hover = Color( 0.258824, 0.878431, 0.309804, 1 )
Button/colors/font_color_pressed = Color( 0.133333, 0.854902, 0.54902, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 1 )
Button/styles/disabled = SubResource( 2 )
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 15
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 15
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )

[sub_resource type="DynamicFont" id=12]
size = 15
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=13]
default_font = SubResource( 12 )

[node name="OptionsMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="MainMenuSprites" parent="." instance=ExtResource( 1 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
theme = ExtResource( 5 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenusButtons" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 133.0
margin_bottom = 560.0
theme = SubResource( 7 )
custom_constants/separation = 5

[node name="MainMenuButton" parent="MarginContainer/HBoxContainer/MenusButtons" instance=ExtResource( 2 )]
margin_right = 133.0
margin_bottom = 37.0

[node name="ReturnButton" parent="MarginContainer/HBoxContainer/MenusButtons" instance=ExtResource( 3 )]
margin_top = 42.0
margin_right = 133.0
margin_bottom = 79.0
rect_scale = Vector2( 1, 1 )

[node name="TabContainer" type="TabContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 143.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Button" parent="MarginContainer/HBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 26.0
margin_right = -2.0
margin_bottom = -2.0
theme = SubResource( 9 )

[node name="ControlsMargin" type="MarginContainer" parent="MarginContainer/HBoxContainer/TabContainer/Controls"]
margin_right = 767.0
margin_bottom = 470.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsScroll" type="ScrollContainer" parent="MarginContainer/HBoxContainer/TabContainer/Controls/ControlsMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 757.0
margin_bottom = 460.0

[node name="ControlsOptions" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer/Controls/ControlsMargin/ControlsScroll"]
margin_right = 217.0
margin_bottom = 31.0
custom_constants/separation = 30

[node name="PresetsHBox" type="HBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer/Controls/ControlsMargin/ControlsScroll/ControlsOptions"]
margin_right = 217.0
margin_bottom = 31.0
custom_constants/separation = 15

[node name="PresetsButton" type="OptionButton" parent="MarginContainer/HBoxContainer/TabContainer/Controls/ControlsMargin/ControlsScroll/ControlsOptions/PresetsHBox"]
margin_right = 89.0
margin_bottom = 31.0
text = "Preset1"
items = [ "Preset1", null, false, 0, false, "Preset2", null, false, 0, false, "Preset3", null, false, 0, false, "Preset4", null, false, 0, false ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavePresetButton" type="Button" parent="MarginContainer/HBoxContainer/TabContainer/Controls/ControlsMargin/ControlsScroll/ControlsOptions/PresetsHBox"]
margin_left = 104.0
margin_right = 217.0
margin_bottom = 31.0
text = "Save preset"

[node name="Audio" type="Button" parent="MarginContainer/HBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 26.0
margin_right = -2.0
margin_bottom = -2.0
theme = SubResource( 11 )

[node name="AudioMargin" type="MarginContainer" parent="MarginContainer/HBoxContainer/TabContainer/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
margin_bottom = -1.99997
size_flags_vertical = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioOptions" type="HBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer/Audio/AudioMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 827.0
margin_bottom = 520.0

[node name="Labels" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer/Audio/AudioMargin/AudioOptions"]
margin_right = 148.0
margin_bottom = 450.0

[node name="MasterVolume" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/Audio/AudioMargin/AudioOptions/Labels"]
margin_right = 148.0
margin_bottom = 45.0
text = "Master Volume : 
"

[node name="MusicVolume" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/Audio/AudioMargin/AudioOptions/Labels"]
margin_top = 49.0
margin_right = 148.0
margin_bottom = 94.0
text = "Music Volume : 
"

[node name="FXVolume" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/Audio/AudioMargin/AudioOptions/Labels"]
margin_top = 98.0
margin_right = 148.0
margin_bottom = 143.0
text = "FX Volume : 
"

[node name="Sliders" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer/Audio/AudioMargin/AudioOptions"]
margin_left = 152.0
margin_right = 747.0
margin_bottom = 450.0
size_flags_horizontal = 3
custom_constants/separation = 35

[node name="MarginMasterSlider" type="MarginContainer" parent="MarginContainer/HBoxContainer/TabContainer/Audio/AudioMargin/AudioOptions/Sliders"]
margin_right = 595.0
margin_bottom = 16.0
custom_constants/margin_right = 300

[node name="MasterSlider" type="HSlider" parent="MarginContainer/HBoxContainer/TabContainer/Audio/AudioMargin/AudioOptions/Sliders/MarginMasterSlider"]
margin_right = 295.0
margin_bottom = 16.0
rounded = true

[node name="MarginMusicSlider" type="MarginContainer" parent="MarginContainer/HBoxContainer/TabContainer/Audio/AudioMargin/AudioOptions/Sliders"]
margin_top = 51.0
margin_right = 595.0
margin_bottom = 67.0
custom_constants/margin_right = 300

[node name="MusicSlider" type="HSlider" parent="MarginContainer/HBoxContainer/TabContainer/Audio/AudioMargin/AudioOptions/Sliders/MarginMusicSlider"]
margin_right = 295.0
margin_bottom = 16.0
rounded = true

[node name="MarginFXSlider" type="MarginContainer" parent="MarginContainer/HBoxContainer/TabContainer/Audio/AudioMargin/AudioOptions/Sliders"]
margin_top = 102.0
margin_right = 595.0
margin_bottom = 118.0
custom_constants/margin_right = 300

[node name="FXSlider" type="HSlider" parent="MarginContainer/HBoxContainer/TabContainer/Audio/AudioMargin/AudioOptions/Sliders/MarginFXSlider"]
margin_right = 295.0
margin_bottom = 16.0
rounded = true

[node name="Video" type="Button" parent="MarginContainer/HBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 26.0
margin_right = -2.0
margin_bottom = -2.0
theme = SubResource( 13 )

[node name="VideoMargin" type="MarginContainer" parent="MarginContainer/HBoxContainer/TabContainer/Video"]
margin_right = 767.0
margin_bottom = 470.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoOptions" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer/Video/VideoMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 757.0
margin_bottom = 460.0

[node name="WindowType" type="HBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer/Video/VideoMargin/VideoOptions"]
margin_right = 747.0
margin_bottom = 31.0

[node name="WindowTypeLabel" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/Video/VideoMargin/VideoOptions/WindowType"]
margin_top = 5.0
margin_right = 155.0
margin_bottom = 26.0
text = "Window setting  : "

[node name="WindowTypeOption" type="OptionButton" parent="MarginContainer/HBoxContainer/TabContainer/Video/VideoMargin/VideoOptions/WindowType"]
margin_left = 159.0
margin_right = 279.0
margin_bottom = 31.0
text = "Full screen"
items = [ "Full screen", null, false, 0, null, "Window", null, false, 1, null, "No border", null, false, 2, null ]
selected = 0

[node name="KeyChangePopup" type="ConfirmationDialog" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
window_title = "Enter a new key"
script = ExtResource( 7 )

[node name="KeyChangeText" type="RichTextLabel" parent="MarginContainer/KeyChangePopup"]
margin_left = 8.0
margin_top = 8.0
margin_right = 976.0
margin_bottom = 520.0
bbcode_enabled = true
[connection signal="confirmed" from="MarginContainer/KeyChangePopup" to="MarginContainer/KeyChangePopup" method="_on_KeyChangePopup_confirmed"]
